@@ -1,12 +1,13 @@
 package com.mobigen.ovp.glossary;
 
+import com.mobigen.ovp.common.constants.Constants;
 import com.mobigen.ovp.common.openmete_client.JsonPatchOperation;
 import com.mobigen.ovp.common.openmete_client.SearchClient;
 import com.mobigen.ovp.common.openmete_client.TablesClient;
 import com.mobigen.ovp.common.openmete_client.GlossaryClient;
 import com.mobigen.ovp.common.openmete_client.dto.Base;
+import com.mobigen.ovp.common.openmete_client.dto.Tag;
 import com.mobigen.ovp.common.openmete_client.dto.TermDto;
-import com.mobigen.ovp.glossary.client.dto.Tag;
 import com.mobigen.ovp.glossary.client.dto.GlossaryDto;
 import com.mobigen.ovp.common.openmete_client.dto.GlossaryActivity;
 import com.mobigen.ovp.common.openmete_client.dto.Glossary;
@@ -30,7 +31,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -42,6 +42,12 @@ public class GlossaryService {
     private final TablesClient tablesClient;
     private final SearchDetailService searchDetailService;
 
+    /**
+     * 용어 사전 생성
+     * @param dto
+     * @return
+     * @throws Exception
+     */
     public Object createGlossary(GlossaryDto dto) throws Exception {
         ResponseEntity<Object> response = glossaryClient.createGlossary(dto);
         if(response.getStatusCode() == HttpStatus.OK || response.getStatusCode() == HttpStatus.CREATED) {
@@ -55,15 +61,24 @@ public class GlossaryService {
      * 용어 사전 리스트
      * @return
      */
-    public List<Glossaries> getGlossaries() {
-        String fields = "owner,tags,reviewers,votes,domain";
-        int limit = 100;
-        List<Glossaries> result = new ArrayList<>();
-        List<Glossary> response = glossaryClient.getGlossaries(fields, limit).getData();
-
-        for(Glossary glossary : response) {
-            result.add(new Glossaries(glossary));
+    public Map<String, Object> getGlossaries(String after) {
+        final String FIELDS = "owner,tags,reviewers,votes,domain";
+        MultiValueMap<String, String> params = new LinkedMultiValueMap<>();
+        params.add("fields", FIELDS);
+        params.add("limit", "1000");
+        if (after != null && !after.equals("undefined") && !after.isEmpty()) {
+            params.add("after", after);
         }
+        List<Glossaries> glossaries = new ArrayList<>();
+        Base<Glossary> response = glossaryClient.getGlossaries(params);
+
+        if(response != null && response.getData() != null) {
+            glossaries = response.getData().stream().map(Glossaries::new).toList();
+        }
+
+        Map<String, Object> result = new HashMap<>();
+        result.put("data", glossaries);
+        result.put("paging", response.getPaging());
         return result;
     }
 
@@ -110,12 +125,22 @@ public class GlossaryService {
      * @param directChildrenOf
      * @return
      */
-    public List<Terms> glossaryTerms(String directChildrenOf) {
+    public Map<String, Object> glossaryTerms(String directChildrenOf, String after) {
         final String FIELDS = "tags,relatedTerms";
-        // TODO: 용어 전체를 가져오는건지 아니면 인피니티 스크롤 이용해서 가져오는지에 따라 after 처리를 해야 함.
-        List<Term> response = glossaryClient.getGlossaryTerms(directChildrenOf, FIELDS, 100, null).getData();
+        MultiValueMap<String, String> params = new LinkedMultiValueMap<>();
+        params.add("directChildrenOf", directChildrenOf);
+        params.add("fields", FIELDS);
+        params.add("limit", "20");
+        if (after != null && !after.equals("undefined") && !after.isEmpty()) {
+            params.add("after", after);
+        }
+        Base<Term> response = glossaryClient.getGlossaryTerms(params);
 
-        return response.stream().map(Terms::new).toList();
+        Map<String, Object> result = new HashMap<>();
+        result.put("terms", response.getData().stream().map(Terms::new).toList());
+        result.put("paging", response.getPaging() != null ? response.getPaging() : null);
+
+        return result;
     }
 
     /**
@@ -164,21 +189,23 @@ public class GlossaryService {
      * @return
      */
     public Map<String, Object> getGlossaryActivities(String entityLink, String after) {
-        String type = "Conversation";
+        final String TYPE = "Conversation";
         Map<String, Object> result = new HashMap<>();
 
-        List<GlossaryActivities> activities = new ArrayList<>();
-        Base<GlossaryActivity> response = glossaryClient.getGlossaryActivities(entityLink, after, type);
-        List<GlossaryActivity> data = response.getData();
-        Object paging = response.getPaging();
+        Base<GlossaryActivity> response = glossaryClient.getGlossaryActivities(entityLink, after, TYPE);
 
-        for(GlossaryActivity activity : data) {
-            activities.add(new GlossaryActivities(activity));
+        List<GlossaryActivities> activities = new ArrayList<>();
+        if (response != null && response.getData() != null) {
+            activities = response.getData().stream()
+                    .map(GlossaryActivities::new)
+                    .toList();
         }
         result.put("activities", activities);
-        result.put("paging", paging);
+        result.put("paging", response != null ? response.getPaging() : null);
+
         return result;
     }
+
 
     /**
      * 용어 사전 활동 사항 개수
@@ -208,7 +235,7 @@ public class GlossaryService {
      * @throws Exception
      */
     public Object getAllTags() {
-        List<com.mobigen.ovp.common.openmete_client.dto.Tag> tags = searchDetailService.getTags(new ArrayList<>(), "", true);
+        List<Tag> tags = searchDetailService.getTags(new ArrayList<>(), "", true);
 
         return tags.stream().map(tag -> {
             Map<String, Object> data = new HashMap<>();
@@ -231,14 +258,23 @@ public class GlossaryService {
 
     /**
      * 데이터 모델 리스트
-     * @param q
+     * @param search
      * @return
      * @throws Exception
      */
-    public Object getDataModels(String q) throws Exception {
+    public Object getDataModels(String search, String name, String from) throws Exception {
+        String q;
+        if (search != null && !search.isEmpty()) {
+            q = "*" + search + "* AND (tags.tagFQN:\"" + name + "\")";
+        } else {
+            q = "** AND (tags.tagFQN:\"" + name + "\")";
+        }
+
         MultiValueMap<String, String> queryParams = new LinkedMultiValueMap<>();
         queryParams.add("q", q);
         queryParams.add("index", "all");
+        queryParams.add("from", from);
+        queryParams.add("size", "10");
 
         List<Map<String, ?>> hits = (List<Map<String, ?>>) ((Map<?, ?>) searchClient.getSearchList(queryParams).get("hits")).get("hits");
 
@@ -258,16 +294,50 @@ public class GlossaryService {
 
                 if(data.containsKey("owner") && data.get("owner") != null) {
                     Map<String, Object> ownerData = (Map<String, Object>) data.get("owner");
-                    tmp.put("owner", ownerData.get("name"));
+                    tmp.put("owner", ownerData);
+                    tmp.put("ownerDisplayName", ownerData.get("displayName"));
                 }
 
+                String serviceType = Optional.ofNullable(data.get("serviceType"))
+                        .map(Object::toString)
+                        .map(String::toLowerCase)
+                        .orElse("");
+                String serviceIcon = "type-img type-img-" + serviceType;
+                tmp.put("serviceIcon", serviceIcon);
+
                 tmp.put("type", String.valueOf(data.get("tableType")));
-                tmp.put("serviceIcon", "serviceIcon");
-                tmp.put("firModelNm", "firModelNm");
-                tmp.put("category", "category");
+
+                String displayName = (String) data.get("displayName");
+                if (displayName == null || "".equals(displayName)) {
+                    tmp.put("firModelNm", "");
+                } else {
+                    tmp.put("firModelNm", data.get("name"));
+                }
+
+                List<Map<String, Object>> tags = (List<Map<String, Object>>) data.get("tags");
+                List<Map<String, Object>> categoryList = new ArrayList<>();
+
+                if (tags != null && !tags.isEmpty()) {
+                    for (Map<String, Object> tag : tags) {
+                        Object tagFQN = tag.get("tagFQN");
+                        if (tagFQN != null && tagFQN.toString().contains(Constants.OVP_CATEGORY)) {
+                            Map<String, Object> categoryData = new HashMap<>();
+                            categoryData.put("id", tag.get("id"));
+                            categoryData.put("name", tag.get("name"));
+                            categoryData.put("tagDisplayName", tag.get("displayName"));
+                            categoryData.put("tagFQN", tagFQN);
+                            categoryData.put("tagName", tag.get("name"));
+                            categoryData.put("tagDescription", tag.get("description"));
+
+                            categoryList.add(categoryData);
+                        }
+                    }
+                }
+                tmp.put("category", categoryList);
+
                 String fqn = (String) data.get("fullyQualifiedName");
                 tmp.put("fullyQualifiedName", fqn);
-                tmp.put("depth", fqn.split("\\."));
+                tmp.put("depth", fqn.split("(?<!\\\\)\\.(?=(?:[^\"]*\"[^\"]*\")*[^\"]*$)"));
 
                 dataList.add(tmp);
             }
@@ -327,7 +397,7 @@ public class GlossaryService {
                 .orElse(Collections.emptyList())
                 .stream()
                 .map(this::mapToColumn)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private List<Map<String, Object>> extractTags(Map<String, Object> previewData, String sourceType) {
@@ -336,6 +406,6 @@ public class GlossaryService {
                 .orElse(Collections.emptyList())
                 .stream()
                 .filter(tag -> sourceType.equals(tag.get("source")))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
